--- a/styles/global.css
+++ b/styles/global.css
@@ -1,13 +1,8 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
 body {
   width: 1100px;
   margin: 0 auto;
-  font-family: Raleway, sans-serif;
+  font-family: 'Raleway', sans-serif;
+  box-sizing: border-box;
 }
 
 h1,
@@ -27,10 +22,6 @@ blockquote {
 
 a {
   color: inherit;
-}
-
-img {
-  width: 100%;
 }
 
 button {
