--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,337 @@
-/* место для вашего кода */
+body {
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+}
+
+.content-section {
+  box-sizing: border-box;
+  width: 100%;
+  max-width: 1100px;
+  min-height: 100px;
+  margin: auto;
+  background-color: #ffffff;
+}
+
+.header {
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center;
+  height: 294px;
+  padding: 92px 50px 96px 50px;
+}
+
+.menu_list {
+  display: flex;
+  gap: 33.7px;
+  color: black;
+  font-family: 'Raleway';
+  font-weight: 400;
+  font-size: 18px;
+  list-style-type: circle;
+}
+
+.menu_list-item {
+  text-underline-position: under;
+}
+
+.menu_list-item-activity {
+  list-style-type: none;
+}
+
+.menu_list-link-activity {
+  text-decoration: none;
+}
+
+.container_header_address_list {
+  width: 240px;
+  height: 98px;
+  padding-left: 186px;
+}
+
+.header_address_list {
+  color: black;
+  font-family: 'Raleway';
+  font-weight: 400;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 24.30px;
+  list-style-type: none;
+}
+
+.address_list-link {
+  color: black;
+  font-family: 'Raleway';
+  font-weight: 400;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 24.30px;
+  text-underline-position: under;
+}
+
+.cover {
+  position: relative;
+  z-index: 0;
+  background-image: url(../images/cover-image.png) ;
+  background-size: auto;
+}
+
+.overlay {
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  opacity: 60%;
+  background-color: black;
+}
+
+
+.cover_title {
+  padding: 165px 25px 0 50px;
+  color: white;
+  font-family:'Raleway';
+  font-weight: 700;
+  font-size: 100px;
+  line-height: 130px;
+  letter-spacing: 30px;
+  text-transform: uppercase;
+}
+
+.accent-span {
+  display: block;
+}
+
+.left-word {
+  text-align: left;
+}
+
+.center-word {
+  text-align: center;
+}
+
+.right-word {
+  letter-spacing: 29px;
+  text-align: right;
+}
+
+.description {
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+ padding: 101px 50px 50px 50px;
+ word-spacing: 19px;
+}
+
+.description_title {
+  color: white;
+  font-family: 'Raleway';
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 28px;
+  text-transform: uppercase;
+}
+
+.bet_button {
+  width: 256px;
+  height: 51px;
+  border: 1px white solid;
+  color: white;
+  font-family: Raleway;
+  font-weight: 500;
+  font-size: 22px;
+  text-transform: uppercase;
+  background-color: transparent;
+}
+
+.lots {
+ padding: 180px 24px 120px 24px;
+}
+
+.lots_heading {
+  padding-bottom: 28.5px;
+  padding-left: 40px;
+  color: black;
+  font-family: 'Raleway';
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+.lots__card-list {
+ display: flex;
+ flex-wrap: wrap;
+ justify-content: space-between;
+ gap: 15px;
+ list-style-type: none;
+ }
+
+.lots__card-list-item {
+  width: 334px;
+  min-height: 596px;
+}
+
+.card-link {
+ position: relative;
+ z-index: 1;
+ display: flex;
+ justify-content: center;
+ height: 100%;
+ text-decoration: none;
+}
+
+.card {
+ display: flex;
+ flex-direction: column;
+ width: 254px;
+ height: 100%;
+ padding: 48px 40px 48px 40px;
+}
+
+.card__title {
+  color: white;
+  font-family: 'Raleway';
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 26.40px;
+  text-decoration: underline;
+  text-transform: uppercase;
+}
+
+.card__text {
+  color: white;
+  font-family: 'Raleway';
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 120%;
+}
+
+.card_type_film {
+  background-image: url(../images/film.png);
+}
+
+.card-film {
+ gap: 276px;
+}
+
+.card_type_book {
+  background-image: url(../images/book.jpg);
+}
+
+.card-book {
+ gap: 33px;
+}
+
+.card_type_picture {
+  background-image: url(../images/picture.png);
+}
+
+.card-picture {
+ gap: 130px;
+}
+
+.lots__look-more-link {
+ display: block;
+ padding-top: 30px;
+ padding-left: 40px;
+ color: black;
+ font-family:'Raleway';
+ font-weight: 400;
+ font-size: 20px;
+}
+
+.about {
+ width: 1052px;
+ height: 595px;
+}
+
+.about__logo {
+  width: 240px;
+  height: 240px;
+}
+
+.about__logo-image {
+  width: 100%;
+  height: 100%;
+  padding-top: 35px;
+  padding-left: 47px;
+}
+
+.about-text-title {
+  display: flex;
+  flex-direction: column;
+  padding-top: 135px;
+ }
+
+.about__column {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  grid-template-rows: min-content 1fr;
+  grid-column-gap: 122px;
+}
+
+.about__title {
+  margin-bottom: 100px;
+  color: black;
+  font-family: 'Raleway';
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+.about__text {
+  color: black;
+  font-family: 'Raleway';
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+}
+
+.about__text-p1 {
+  margin-bottom: 24px;
+}
+
+.text-bag{
+  text-wrap: wrap;
+}
+
+.footer {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  justify-items: baseline;
+  justify-content: center;
+  align-items: start;
+  height: 180px;
+  margin-top: 180px;
+  padding-right: 50px;
+  padding-left: 50px;
+}
+
+.footer-links {
+  display: flex;
+  justify-content: space-between;
+  width: 240px;
+  height: 48px;
+  padding-left: 185px;
+  list-style-type: none;
+}
+
+.footer_address_list {
+  color: black;
+  font-family: 'Raleway';
+  font-weight: 400;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 24.30px;
+  text-align: left;
+  list-style-type: none;
+}
+
+.footer_menu_list {
+  color: black;
+  font-family: 'Raleway';
+  font-weight: 400;
+  font-size: 18px;
+  text-align: center;
+  list-style-type: none;
+}
+
+
