--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,22 +1,19 @@
 @font-face {
-  font-family: "Raleway";
-  src: url(/fonts/Raleway-Regular.ttf) format(ttf);
+  font-family: "Raleway", sans-serif;
   src: url(/fonts/Raleway-Regular.woff) format(woff);
   src: url(/fonts/Raleway-Regular.woff2) format(woff2);
   font-weight: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Raleway";
-  src: url(/fonts/Raleway-Medium.ttf) format(ttf);
+  font-family: "Raleway", sans-serif;
   src: url(/fonts/Raleway-Medium.woff) format(woff);
   src: url(/fonts/Raleway-Medium.woff2) format(woff2);
   font-weight: 500;
   font-display: swap;
 }
 @font-face {
-  font-family: "Raleway";
-  src: url(/fonts/Raleway-Bold.ttf) format(ttf);
+  font-family: "Raleway", sans-serif;
   src: url(/fonts/Raleway-Bold.woff) format(woff);
   src: url(/fonts/Raleway-Bold.woff2) format(woff2);
   font-weight: bold;
