--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,7 @@
-body {
-  font-family: "Raleway", sans-serif;
-  font-weight: 400;
-}
-
 .content-section {
   box-sizing: border-box;
   width: 100%;
   max-width: 1100px;
-  min-height: 100px;
   margin: auto;
   background-color: #ffffff;
 }
@@ -16,7 +10,6 @@ body {
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
-  height: 294px;
   padding: 92px 50px 96px 50px;
 }
 
@@ -24,7 +17,7 @@ body {
   display: flex;
   gap: 33.7px;
   color: black;
-  font-family: 'Raleway';
+  font-family: 'Raleway', sans-serif;
   font-weight: 400;
   font-size: 18px;
   list-style-type: circle;
@@ -34,8 +27,8 @@ body {
   text-underline-position: under;
 }
 
-.menu_list-item-activity {
-  list-style-type: none;
+.header__links-list-item_no-bullit {
+ list-style-type: none;
 }
 
 .menu_list-link-activity {
@@ -44,13 +37,13 @@ body {
 
 .container_header_address_list {
   width: 240px;
-  height: 98px;
   padding-left: 186px;
 }
 
-.header_address_list {
+.address_list {
+  width: 233px;
   color: black;
-  font-family: 'Raleway';
+  font-family: 'Raleway', sans-serif;
   font-weight: 400;
   font-size: 18px;
   font-style: normal;
@@ -60,7 +53,7 @@ body {
 
 .address_list-link {
   color: black;
-  font-family: 'Raleway';
+  font-family: 'Raleway', sans-serif;
   font-weight: 400;
   font-size: 18px;
   font-style: normal;
@@ -71,8 +64,9 @@ body {
 .cover {
   position: relative;
   z-index: 0;
-  background-image: url(../images/cover-image.png) ;
-  background-size: auto;
+  background-image: url(../images/cover-image.png);
+  background-position: center;
+  background-size: cover;
 }
 
 .overlay {
@@ -88,7 +82,7 @@ body {
 .cover_title {
   padding: 165px 25px 0 50px;
   color: white;
-  font-family:'Raleway';
+  font-family:'Raleway', sans-serif;
   font-weight: 700;
   font-size: 100px;
   line-height: 130px;
@@ -123,7 +117,7 @@ body {
 
 .description_title {
   color: white;
-  font-family: 'Raleway';
+  font-family: 'Raleway', sans-serif;
   font-weight: 400;
   font-size: 22px;
   line-height: 28px;
@@ -132,14 +126,15 @@ body {
 
 .bet_button {
   width: 256px;
-  height: 51px;
+  min-height: 51px;
   border: 1px white solid;
   color: white;
-  font-family: Raleway;
+  font-family: 'Raleway', sans-serif;
   font-weight: 500;
   font-size: 22px;
   text-transform: uppercase;
   background-color: transparent;
+  cursor: pointer;
 }
 
 .lots {
@@ -150,7 +145,7 @@ body {
   padding-bottom: 28.5px;
   padding-left: 40px;
   color: black;
-  font-family: 'Raleway';
+  font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 40px;
   text-transform: uppercase;
@@ -181,14 +176,14 @@ body {
 .card {
  display: flex;
  flex-direction: column;
+ justify-content: space-between;
  width: 254px;
- height: 100%;
  padding: 48px 40px 48px 40px;
 }
 
 .card__title {
   color: white;
-  font-family: 'Raleway';
+  font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 22px;
   line-height: 26.40px;
@@ -198,7 +193,7 @@ body {
 
 .card__text {
   color: white;
-  font-family: 'Raleway';
+  font-family: 'Raleway', sans-serif;
   font-weight: 400;
   font-size: 20px;
   line-height: 120%;
@@ -208,39 +203,29 @@ body {
   background-image: url(../images/film.png);
 }
 
-.card-film {
- gap: 276px;
-}
 
 .card_type_book {
   background-image: url(../images/book.jpg);
 }
 
-.card-book {
- gap: 33px;
-}
 
 .card_type_picture {
   background-image: url(../images/picture.png);
 }
 
-.card-picture {
- gap: 130px;
-}
 
 .lots__look-more-link {
  display: block;
  padding-top: 30px;
  padding-left: 40px;
  color: black;
- font-family:'Raleway';
+ font-family:'Raleway', sans-serif;
  font-weight: 400;
  font-size: 20px;
 }
 
 .about {
  width: 1052px;
- height: 595px;
 }
 
 .about__logo {
@@ -265,28 +250,25 @@ body {
   display: grid;
   grid-template-columns: min-content 1fr;
   grid-template-rows: min-content 1fr;
-  grid-column-gap: 122px;
+  grid-column-gap: 121px;
 }
 
 .about__title {
-  margin-bottom: 100px;
   color: black;
-  font-family: 'Raleway';
+  font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 40px;
   text-transform: uppercase;
+  margin-bottom: 78px;
 }
 
 .about__text {
   color: black;
-  font-family: 'Raleway';
+  font-family: 'Raleway', sans-serif;
   font-weight: 400;
   font-size: 20px;
   line-height: 24px;
-}
-
-.about__text-p1 {
-  margin-bottom: 24px;
+  margin-top: 24px;
 }
 
 .footer {
@@ -295,7 +277,6 @@ body {
   justify-items: baseline;
   justify-content: center;
   align-items: start;
-  height: 180px;
   margin-top: 180px;
   padding-right: 50px;
   padding-left: 50px;
@@ -310,20 +291,9 @@ body {
   list-style-type: none;
 }
 
-.footer_address_list {
-  color: black;
-  font-family: 'Raleway';
-  font-weight: 400;
-  font-size: 18px;
-  font-style: normal;
-  line-height: 24.30px;
-  text-align: left;
-  list-style-type: none;
-}
-
 .footer_menu_list {
   color: black;
-  font-family: 'Raleway';
+  font-family: 'Raleway', sans-serif;
   font-weight: 400;
   font-size: 18px;
   text-align: center;
