--- a/styles/style.css
+++ b/styles/style.css
@@ -10,12 +10,12 @@
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
-  padding: 90px 48px 96px 50px;
+  padding: 92px 50px 96px 50px;
 }
 
 .menu_list {
   display: flex;
-  gap: 37.3px;
+  gap: 34px;
   color: black;
   font-family: 'Raleway', sans-serif;
   font-weight: 400;
@@ -141,12 +141,12 @@
 }
 
 .lots {
- padding: 180px 24px 120px 24px;
+ padding: 180px 20px 120px 30px;
 }
 
 .lots_heading {
   padding-bottom: 28.5px;
-  padding-left: 40px;
+  padding-left: 42px;
   color: black;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
@@ -219,8 +219,8 @@
 
 .lots__look-more-link {
  display: block;
- padding-top: 31px;
- padding-left: 46px;
+ padding-top: 30px;
+ padding-left: 42px;
  color: black;
  font-family:'Raleway', sans-serif;
  font-weight: 400;
@@ -239,8 +239,8 @@
 .about__logo-image {
   width: 100%;
   height: 100%;
-  padding-top: 33px;
-  padding-left: 47px;
+  padding-top: 31px;
+  padding-left: 51px;
 }
 
 .about-text-title {
@@ -253,12 +253,12 @@
   display: grid;
   grid-template-columns: min-content 1fr;
   grid-template-rows: min-content 1fr;
-  grid-column-gap: 121px;
+  grid-column-gap: 125px;
   margin-bottom: 50px;
 }
 
 .about__title {
-  margin-bottom: 78px;
+  margin-bottom: 75px;
   color: black;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
@@ -269,7 +269,7 @@
 .about__text {
   margin-top: 24px;
   color: black;
-  font-family: Raleway, sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 400;
   font-size: 20px;
   line-height: 24px;
@@ -281,8 +281,8 @@
   justify-items: baseline;
   justify-content: center;
   align-items: start;
-  margin-top: 204px;
-  padding-right: 50px;
+  margin-top: 184px;
+  padding-right: 48px;
   padding-left: 50px;
 }
 
